--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <img src="https://i.postimg.cc/t403yfn9/home2.jpg" alt="img ">
             </div>
             <div class="home_txt ">
-                <p class="collectio ">SUMMER COLLECTION</p>
-                <h2>FALL - WINTER<br>Collection 2023</h2>
+                <p class="collectio ">WINTER COLLECTION</p>
+                <h2>WINTER<br>Collection 2023</h2>
                 <div class="home_label ">
                     <p>A specialist label creating luxury essentials. Ethically crafted<br>with an unwavering commitment to exceptional quality.</p>
                 </div>
@@ -72,7 +72,7 @@
             <div class="content2">
                 <img src="https://i.postimg.cc/8CmBZH5N/shoes.webp" alt="img" />
                 <div class="img-content2">
-                    <p>Shoes Spring</p>
+                    <p>Shoes Collection</p>
                     <button><a href="#sellers">SHOP NOW</a></button>
                 </div>
             </div>
